src/components/layout/MainLayout.scss
@import '../../scss/global';

.main-layout {
  & > .row > * {
    padding-left: 0;
    padding-right: 0;
  }
  .navbar-left-wrapper {
    display: none;
    @include media-breakpoint-up(lg) {
      display: block;
      min-width: 15rem;
      width: calc(100% * 2/12);
    }
  }
  .main-content-wrapper {
    @include media-breakpoint-up(lg) {
      max-width: calc(100% - 15rem);
      width: calc(100% * 10/12);
    }
  }
}

#navbar-left {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  top: 0;
  bottom: 0;
  height: 100vh;
}

